--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.5",
+    "@astrojs/mdx": "^4.3.13",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/svelte": "7.2.2",
@@ -36,6 +38,7 @@
     "astro": "5.15.4",
     "astro-expressive-code": "^0.41.3",
     "astro-icon": "^1.1.5",
+    "chart.js": "^4.5.1",
     "hastscript": "^9.0.1",
     "katex": "^0.16.24",
     "markdown-it": "^14.1.0",
@@ -43,6 +46,8 @@
     "overlayscrollbars": "^2.12.0",
     "pagefind": "^1.4.0",
     "photoswipe": "^5.4.4",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-components": "^0.3.0",
