--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.5",
     "@astrojs/mdx": "^4.3.13",
+    "@astrojs/partytown": "^2.1.4",
     "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
@@ -35,7 +36,7 @@
     "@iconify/svelte": "^4.2.0",
     "@swup/astro": "^1.7.0",
     "@tailwindcss/typography": "^0.5.19",
-    "astro": "5.15.4",
+    "astro": "5.16.6",
     "astro-expressive-code": "^0.41.3",
     "astro-icon": "^1.1.5",
     "chart.js": "^4.5.1",
